# Natural-Ungrokking

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
configs/: ankill_p1000.yaml  ankill_p500.yaml  ankill_p667.yaml  ankill_p750.yaml  ankill_p900.yaml  databudget_dn15.yaml  databudget_dn5.yaml  kill_p1000.yaml  kill_p437.yaml  kill_p645.yaml  local_smoke.yaml  rescue_d001.yaml  rescue_d010.yaml  rescue_d100.yaml  rescue_d100_early.yaml  rescue_d100_late.yaml  rescue_d300.yaml  sweep_v1.yaml  ts_packed_armB.yaml  v1_onedoc.yaml  v1_onedoc_masked.yaml  v1_repro.yaml  web_dn15.yaml  web_dn5.yaml  web_packed.yaml
data/local_smoke/: tokenizer.json
infra/skypilot/: dev.yaml  eval_consumer.yaml  eval_public_suites.yaml  smoke.yaml  train_sweep.yaml
prereg/: PREREGISTRATION.md  draft_inputs.md
scripts/: ankill_run_node.sh  bootstrap_cis.py  build_an_kill_shards.py  build_kill_shards.py  check_intervention_disjoint.py  check_replication.py  check_rvp5_disjoint.py  compute_frequency.py  count_priors.py  count_support.py  eval_ankill.py  eval_bpb.py  eval_fstar.py  eval_m3.py  eval_m4.py  eval_m4prime.py  eval_predictions.py  eval_public_suite.py  eval_rvp5.py  eval_step6.py  eval_step6t.py  fig_mech_decomp.py  fig_public_transfer.py  fig_social_summary.py  fig_step6_overlay.py  fig_style.py  fig_trajectories.py  gate_a_classify.py  gen_rescue_docs.py  gen_rvp5.py  make_paper_tables.py  mech_borrowed_head.sh  mech_borrowed_node.sh  mech_decomp.py  mech_gender_scalar.py  mech_heads.py  mech_margins.py  mech_patch.py  mech_summary.py  ngram_baseline.py  (+22 more)
(+34 files in other folders)
