[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fogen"
version = "0.1.0"
description = "Phase diagram of transient linguistic capabilities"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "transformers>=4.44",
    "datasets",
    "safetensors",
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "wandb",
    "boto3",
    "pyyaml",
    "tqdm",
]

[project.optional-dependencies]
analysis = ["devinterp", "scikit-learn", "statsmodels"]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
